force-app/main/default/objects/DocuSignConfig_mdt__mdt/DocuSignConfig_mdt__mdt.object-meta.xml
<CustomObject>
    <label>DocuSignConfig__mdt</label>
    <pluralLabel>DocuSignConfig__mdtS</pluralLabel>
</CustomObject>