force-app/main/default/objects/DocuSignConfig_mdt__mdt/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>