force-app/main/default/objects/DocuSignConfig_mdt__mdt/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>